[package]
name = "fdev"
version = "0.3.245"
edition = "2024"
rust-version = "1.85"
publish = true
description = "Freenet development tool"
license-file = "LICENSE.md"
repository = "https://github.com/freenet/freenet-core"
readme = "README.md"

[package.metadata.binstall]
# fdev's crate version (0.3.x) is independent of the freenet-core release tag
# (v0.2.x), so we embed the matching freenet version literally — `v{ version }`
# would expand to the fdev crate version and 404. release.yml rewrites the
# `vX.Y.Z` segment whenever the freenet version is bumped (issue #3995).
pkg-url = "{ repo }/releases/download/v0.2.83/fdev-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "fdev"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v0.2.83/fdev-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "fdev.exe"

[dependencies]
bytesize = "2.3"
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = ["http1", "matched-path", "query", "tower-log", "ws"] }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dashmap = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
glob = "0.3"
prettytable-rs = "0.10"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
semver = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "signal", "parking_lot", "process"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true, features = ["default", "preserve_order"] }
tracing = { workspace = true }
xz2 = { workspace = true, features = ["tokio"] }
http = { workspace = true }

ciborium = "0.2"
dirs = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hex = { workspace = true }

# internal
freenet = { path = "../core", version = "0.2.83", features = ["testing"] }
freenet-stdlib = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
trace-ot = ["freenet/trace-ot"]
# testing feature is always enabled for fdev (it's a development tool)
