[package]
name = "freenet-macros"
version = "0.1.0"
edition = "2024"
authors = ["Freenet Contributors"]
description = "Procedural macros for Freenet"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
