[package]
name = "freenet2-node"
version = "0.0.1"
edition = "2018"

[dependencies]
# anyhow = "1.0.42"
config = "0.11"
env_logger = "0.9.0"
futures = "0.3.17"
libp2p = { version = "0.39", features = [
    "identify",
    "mplex",
    "noise",
    "tcp-tokio",
    "dns-tokio",
    "yamux"
] }
log = "0.4"
once_cell = "1.8"
serde = "1.0"
tokio = { version = "1.10", features = ["rt-multi-thread", "sync", "macros"] }

[dev-dependencies]
rand = "0.8.4"
