[package]
name = "freenet2-node"
version = "0.0.1"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "node-deploy" 
path = "src/bin/gateway-deploy.rs"
doc = false

[dependencies]
# anyhow = "1.0.42"
bincode = "1.3"
config = "0.11"
crossbeam = "0.8.1"
env_logger = "0.9.0"
libp2p = { version = "0.39", features = [
    "identify",
    "mplex",
    "noise",
    "tcp-tokio",
    "dns-tokio",
    "yamux"
] }
log = { version = "0.4", features = ["serde"] }
once_cell = "1.8"
parking_lot = "0.11.2"
rand = "0.8"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.10", features = ["rt-multi-thread", "sync", "macros"] }
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
