[package]
name = "http-gw"
version = "0.0.0"
edition = "2021"
rust-version = "1.58.0"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3", default-features = false, features = ["multipart", "tls"] }
flate2 = "1.0.23"

# internal:
locutus-node = { path = "../locutus-node", features = ["websocket"] }
locutus-stdlib = { path = "../locutus-stdlib"}
