[package]
name = "http-gw"
version = "0.0.0"
edition = "2021"
rust-version = "1.58.0"
publish = false

[dependencies]
async-trait = "0.1"
byteorder = "1"
log = "0.4"
env_logger = "0.9.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3", default-features = false, features = ["multipart", "tls"] }
xz2 = "0.1"
hyper = "0.14.4"
rand = { version = "0.8" }

# internal:
locutus-node = { path = "../locutus-node", features = ["websocket"] }
locutus-runtime = { path = "../locutus-runtime"}
locutus-dev = { path = "../locutus-dev", optional = true }

[features]
local = ["locutus-dev"]
