[package]
name = "http-gw"
version = "0.0.0"
edition = "2021"
rust-version = "1.58.0"
publish = false

[dependencies]
async-trait = "0.1"
bytes = "1"
byteorder = "1"
env_logger = "0.9.0"
futures = "0.3.24"
log = "0.4"
serde = "1"
serde_json = "1"
tar = "0.4.38"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
xz2 = "0.1"
warp = { version = "0.3", default-features = false, features = ["multipart", "tls"] }

# internal:
locutus-node = { path = "../locutus-node", features = ["websocket"] }
locutus-runtime = { path = "../locutus-runtime"}
locutus-dev = { path = "../locutus-dev", optional = true }

[features]
local = ["locutus-dev"]
