[package]
name = "locutus-dev"
version = "0.0.0"
edition = "2021"
rust-version = "1.58.0"
publish = false

[dependencies]
byteorder = "1"
clap = { version = "3", features = ["derive", "env"] }
either = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs", "signal", "parking_lot"] }
pico-args = "0.5"
serde = "1"
bincode = "1"
tar = "0.4"
xz2 = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }

# (mp) message pack feature
rmp = { version = "0.8", optional = true }
rmpv = { version = "1", optional = true }
rmp-serde = { version = "1", optional = true }

# json feature
serde_json = { version = "1", optional = true }

# internal
locutus-node = { path = "../locutus-node" }
locutus-runtime = { path = "../locutus-runtime" }

[features]
default = ["json"]
json = ["serde_json"]
messagepack = ["rmp", "rmpv", "rmp-serde"]
