[package]
name = "locutus-dev"
version = "0.0.2"
edition = "2021"
rust-version = "1.58.0"
publish = true
description = "Locutus P2P development tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/locutus"

[dependencies]
atty = "0.2"
byteorder = "1"
clap = { version = "4", features = ["derive", "env"] }
either = "1"
futures = "0.3"
glob = "0.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs", "signal", "parking_lot"] }
pico-args = "0.5"
serde = "1"
serde_json = "1"
serde_with = "2"
bincode = "1"
tar = "0.4"
toml = { version = "0.5", features = ["preserve_order"] }
xz2 = "0.1"

# (mp) message pack feature
rmp = { version = "0.8", optional = true }
rmpv = { version = "1", optional = true }
rmp-serde = { version = "1", optional = true }

# internal
locutus-core = { path = "../locutus-core", version = "0.0.2" }
locutus-runtime = { path = "../locutus-runtime", version = "0.0.2" }

[features]
messagepack = ["rmp", "rmpv", "rmp-serde"]
