[package]
name = "locutus-dev"
version = "0.0.3"
edition = "2021"
rust-version = "1.58.0"
publish = true
description = "Locutus P2P development tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/locutus"

[dependencies]
bs58 = { workspace = true }
atty = "0.2"
# byteorder = "1"
clap = { workspace = true, features = ["derive", "env"] }
either = { workspace = true }
futures = { workspace = true }
glob = "0.3"
thiserror = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal", "parking_lot"] }
pico-args = "0.5"
semver = { workspace = true }
serde = "1"
serde_json = "1"
serde_with = { workspace = true }
bincode = "1"
tar = "0.4"
toml = { version = "0.7.6", features = ["default", "preserve_order"] }
xz2 = "0.1"

# (mp) message pack feature
rmp = { version = "0.8", optional = true }
rmpv = { version = "1", optional = true }
rmp-serde = {  workspace = true }

# internal
locutus-core = { path = "../locutus-core", version = "0.0.3" }
locutus-runtime = { path = "../locutus-runtime", version = "0.0.3" }
locutus-stdlib = { path = "../locutus-stdlib", version = "0.0.3" }

[features]
messagepack = ["rmp", "rmpv"]
