[package]
name = "locutus"
version = "0.0.3"
edition = "2021"
rust-version = "1.58.0"
publish = true
description = "Locutus P2P network main node implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/locutus"

[[bin]]
name = "locutus-node"
path = "src/bin/node.rs"

[[bin]]
name = "ldt"
path = "src/bin/dev-tool.rs"

[dependencies]
async-trait = "0.1"
bytes = "1"
byteorder = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.21"
log = "0.4"
serde = "1"
serde_json = "1"
tar = "0.4.38"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
xz2 = "0.1"
warp = { version = "0.3", default-features = false, features = ["multipart", "tls"] }
rmp = { workspace = true }
rmpv = { workspace = true }
rmp-serde = { workspace = true }

# internal:
locutus-core = { path = "../locutus-core", features = ["websocket"], version = "0.0.3" }
locutus-dev = { path = "../locutus-dev", version = "0.0.3" }
locutus-stdlib = { path = "../locutus-stdlib", version = "0.0.3" }
