[package]
name = "locutus"
version = "0.0.3"
edition = "2021"
rust-version = "1.58.0"
publish = true
description = "Locutus P2P network main node implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/locutus"

[[bin]]
name = "locutus-node"
path = "src/bin/node.rs"

[[bin]]
name = "ldt"
path = "src/bin/dev-tool.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.6", default-features = false, features = ["ws", "tower-log", "matched-path"] }
bytes = "1"
byteorder = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.21"
serde = "1"
serde_json = "1"
tar = "0.4.38"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
xz2 = "0.1"
tower-http = { version = "0.3", features = ["trace"] }
rmp = { workspace = true }
rmpv = { workspace = true }
rmp-serde = { workspace = true }

# internal:
locutus-core = { path = "../locutus-core", version = "0.0.3" }
locutus-dev = { path = "../locutus-dev", version = "0.0.3" }
locutus-stdlib = { path = "../locutus-stdlib", version = "0.0.3" }
