[package]
name = "locutus-runtime"
version = "0.0.0"
edition = "2021"
rust-version = "1.58.0"
publish = false

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
arrayvec = { version = "0.7", features = ["serde"] }
async-trait = "0.1"
blake2 = { version =  "0.10", features = [ "std" ] }
bs58 = "0.4"
dashmap = "^5.1"
futures = "0.3"
serde = { version = "1", features = ["rc", "derive"] }
serde_bytes = "0.11"
stretto = { version = "0.4", features = ["async", "sync"], default-features = false }
tracing = "0.1"
thiserror = "1"
walkdir = "2.3.2"
wasmer = { version = "^2.0", default-features = false, features = [ 
	"sys" 
]}
wasmer-compiler-llvm = { version="^2.0", optional = true }

# internal
locutus-stdlib = { path = "../locutus-stdlib", features = ["archive"] }

[features]
default = [ "wasmer-default" ]
wasmer-default = [ 	
	"wasmer/llvm",
	"wasmer-compiler-llvm",
	"wasmer/default-cranelift",
	# "wasmer/dylib"
	"wasmer/universal"
]
testing = ["arbitrary", "locutus-stdlib/testing"]

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
wasmer = { version = "^2.0", features = [ "sys-default", "wat"] }
bincode = "1"
once_cell = "1"
rand = { version = "0.8", features = ["small_rng"] }
wasmer-wasi = "2"
