[package]
name = "locutus-runtime"
version = "0.0.3"
edition = "2021"
rust-version = "1.58.0"
publish = true 
description = "Locutus P2P network WASM runtime library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/locutus"

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
arrayvec = { version = "0.7", features = ["serde"] }
async-trait = "0.1"
bincode = "1"
blake2 = { version =  "0.10", features = [ "std" ] }
bs58 = "0.4"
chacha20poly1305 = { workspace = true }
dashmap = "^5.1"
either = { workspace = true }
futures = "0.3"
notify = "5"
once_cell = "1"
serde = { version = "1", features = ["rc", "derive"] }
serde_bytes = "0.11"
rand = { workspace = true }
rmpv = "1"
rmp-serde = { version = "1" }
serde_json = "1"
stretto = { version = "0.7", features = ["async", "sync"], default-features = false }
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
thiserror = "1"
walkdir = "2.3.2"
wasmer = { version = "^2.0", default-features = false, features = [ 
	"sys"
]}
wasmer-compiler-llvm = { version="^3.0", optional = true }
varuint = "0.6"
semver = { version = "1.0.14",  features = ["serde"]}
byteorder = "1"

# internal
locutus-stdlib = { path = "../locutus-stdlib", features = ["archive"], version = "0.0.3" }

[features]
default = [ "wasmer-default" ]
wasmer-default = [ 	
	"wasmer/llvm",
	"wasmer-compiler-llvm",
	"wasmer/default-cranelift",
	# "wasmer/dylib"
	"wasmer/universal"
]
testing = ["arbitrary", "locutus-stdlib/testing"]
trace = ["locutus-stdlib/trace"]

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
wasmer = { version = "^2.0", features = [ "sys-default", "wat"] }
bincode = "1"
once_cell = "1"
rand = { version = "0.8", features = ["small_rng"] }
wasmer-wasi = "2"
