[package]
name = "locutus-stdlib"
version = "0.0.3"
edition = "2021"
rust-version = "1.58.0"
publish = true
description = "Locutus P2P network standard library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/locutus"

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
arrayvec = { version = "0.7", features = ["serde"] }
bincode = "1"
byteorder = "1"
blake2 = { version =  "0.10", features = [ "std" ] }
bs58 = "0.4"
futures = { workspace = true }
once_cell = "1"
rmpv = { version = "1"}
rmp-serde = {  workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tar = "0.4.38"
thiserror = "1"
tracing = {workspace = true }
tracing-subscriber = { workspace = true, features = ["default", "env-filter"] }
xz2 = { version = "0.1", optional = true }
# internal
locutus-macros = { path = "../locutus-macros", version = "0.0.3" }

[target.'cfg(target_family = "unix")'.dependencies]
tokio = { version = "1", optional = true, features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.18", optional = true } 

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
optional = true

[target.'cfg(target_family = "unix")'.dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
bincode = "1"
wasmer = { workspace = true, features = [ "sys-default"] }
wasmer-wasi = { workspace = true }
rand = { version = "0.8", features = ["small_rng"] }

[features]
default = ["net"]
archive = ["xz2"]
net = ["serde-wasm-bindgen", "tokio", "tokio-tungstenite", "wasm-bindgen", "web-sys"]
testing = ["arbitrary"]
trace = []
