[package]
name = "locutus-stdlib"
version = "0.0.3"
edition = "2021"
rust-version = "1.60.0"
publish = true
description = "Locutus P2P network standard library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/locutus"

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
arrayvec = { version = "0.7", features = ["serde"] }
bincode = "1"
byteorder = "1"
blake2 = { version =  "0.10", features = [ "std" ] }
bs58 = "0.4"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
futures = "0.3"
once_cell = "1"
rmpv = { version = "1"}
rmp-serde = { version = "1" }
semver = { version = "1.0.14",  features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_with = { version = "2", default-features = false, features = ["macros", "alloc"] }
tar = { version = "0.4.38", optional = true }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter"] }
xz2 = { version = "0.1", optional = true }
# internal
locutus-macros = { path = "../locutus-macros", version = "0.0.3" }

[target.'cfg(target_family = "unix")'.dependencies]
tokio = { version = "1", optional = true, features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.18", optional = true } 

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
optional = true

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies.js-sys]
version = "0.3"
optional = true

[target.'cfg(target_family = "unix")'.dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
bincode = "1"
wasmer = { version = "3", features = [ "sys-default"] }
wasmer-wasi = { version = "3" }
rand = { version = "0.8", features = ["small_rng"] }

[features]
default = []
archive = ["xz2", "tar"]
net = ["dep:tokio", "dep:tokio-tungstenite", "dep:wasm-bindgen", "dep:web-sys", "dep:js-sys", "dep:serde-wasm-bindgen"]
testing = ["arbitrary"]
trace = []
time = []
