[package]
name = "locutus-stdlib"
version = "0.0.3"
edition = "2021"
rust-version = "1.71.1"
publish = true
description = "Locutus P2P network standard library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/locutus"

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
arrayvec = { workspace = true }
bincode = "1"
byteorder = "1"
blake3 = { workspace = true }
bs58 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
futures = "0.3"
once_cell = "1"
rmpv = { version = "1"}
rmp-serde = { version = "1" }
semver = { workspace = true,  features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["macros", "alloc"] }
tar = { version = "0.4.38", optional = true }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter"] }
xz2 = { version = "0.1", optional = true }
flatbuffers = "23.5.26"
# internal
locutus-macros = { path = "../locutus-macros", version = "0.0.3" }

[target.'cfg(any(unix, windows))'.dependencies]
tokio = { version = "1", optional = true, features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.20", optional = true }
serde_with = { version = "3" }

[target.'cfg(target_family = "wasm")'.dependencies]
serde-wasm-bindgen = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
optional = true

[target.'cfg(all(target_family = "wasm"))'.dependencies.js-sys]
version = "0.3"
optional = true

[target.'cfg(any(unix, windows))'.dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
bincode = "1"
wasmer = { version = "4.2.0", features = [ "sys-default"] }
rand = { version = "0.8", features = ["small_rng"] }

[features]
default = []
archive = ["xz2", "tar"]
net = ["dep:tokio", "dep:tokio-tungstenite", "dep:wasm-bindgen", "dep:web-sys", "dep:js-sys", "dep:serde-wasm-bindgen"]
testing = ["arbitrary"]
trace = []
contract = ["time", "log"]
time = []
log = []
