[package]
name = "freenet-macros"
version = "0.0.4"
edition = "2021"
rust-version = "1.71.1"
publish = true 
description = "Procedural macros for Freenet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/locutus"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
