[package]
name = "freenet-release-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "HTTP agent that lets the freenet-core release pipeline trigger gateway updates"
repository = "https://github.com/freenet/freenet-core"

[[bin]]
name = "freenet-release-agent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
axum = { workspace = true, default-features = false, features = ["http1", "json", "tokio"] }
clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
# hmac 0.13 and the workspace's sha2 0.11 both build on digest 0.11, so they
# share a digest version. Keep these two on the same digest line: a mismatch
# (e.g. hmac on digest 0.11 + sha2 on digest 0.10) makes `Hmac<Sha256>` fail
# the `EagerHash` trait bounds.
hmac = "0.13"
sha2 = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "signal", "process", "fs", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "test-util"] }
