[package]
name = "freenet-website-contract"
version = "0.1.0"
edition = "2021"
description = "Freenet website container contract - serves signed, versioned static websites"
license-file = "../../LICENSE.md"
repository = "https://github.com/freenet/freenet-core"

[dependencies]
byteorder = { workspace = true }
ciborium = "0.2"
freenet-stdlib = { workspace = true }
serde = { workspace = true }
bs58 = { workspace = true }

# Fully remove `rand_core` from `ed25519-dalek` for wasm builds
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "serde"] }

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["freenet-main-contract", "contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]
