[workspace]
members = ["delegates/token-generator", "contracts/token-allocation-record", "interfaces"]
resolver = "2"

[workspace.dependencies]
bincode = { version = "1" }
bs58 = "0.5"
chrono = { version = "0.4", default-features = false }
freenet-stdlib = { path = "../../stdlib/rust" }
rsa = { version = "0.9", default-features = false, features = ["serde", "pem"] }
serde = { version = "1" }
serde_json = { version = "1" }
