[package]
name = "freenet-js-stdlib"
version = "0.0.0"
edition = "2021"
rust-version = "1.71.1"
resolver = "2"
publish = false

[workspace]

[dependencies]
freenet-stdlib = { path = "../rust" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true

#[target.wasm32-unknown-unknown]
#rustflags = ["-C", "link-arg=--import-memory"]

[build-dependencies]
byteorder = "1"
serde = "1"
serde_json = "1"
tar = "0.4"
xz2 = "0.1"
