[workspace]
resolver = "2"
members = ["deps", "container"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true

[workspace.dependencies]
freenet-stdlib = { git = "https://github.com/freenet/freenet-stdlib.git", tag = "v0.1.14", default-features = false }
