[package]
name = "test-contract-1"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
freenet-stdlib = { git = "https://github.com/freenet/freenet-stdlib.git", tag = "v0.1.14", features = ["contract"] }

[features]
default = ["freenet-main-contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]
